# labs

laba1/: CMakeLists.txt  main.cpp
laba1/include/: header.h
laba1/src/: function.cpp
laba1/test/: tests.cpp
